change type of `DownloadPromise.remoteUri` from `URI` to `URL`
`java.net.URI` follow RFC 2396 that is too old. so if the given url that
follows "RFC 3986", it will throw `URISyntaxException`.